# AutoWoker

./: .gitignore  CMakeLists.txt  README.md  img.qrc  main.cpp  mainwindow.cpp  resource.qrc
API/: apihandler.cpp  apihandler.h
CloneDatabase/: clonedatabase.cpp  clonedatabase.h  connectsqlite.cpp  connectsqlite.h
Form/: downloaddialog.cpp  downloaddialog.h  downloaddialog.ui  faddfile.cpp  faddfile.h  faddfile.ui  fcauhinhchung.cpp  fcauhinhchung.h  fcauhinhchung.ui  fcauhinhhienthi.cpp  fcauhinhhienthi.h  fcauhinhhienthi.ui  fcauhinhtuongtac.cpp  fcauhinhtuongtac.h  fcauhinhtuongtac.ui  fchonthumuc.cpp  fchonthumuc.h  fchonthumuc.ui  fdanhsachkichban_old.cpp  fdanhsachkichban_old.h  fdanhsachkichban_old.ui  fimportaccount.cpp  fimportaccount.h  fimportaccount.ui  fimportaccountformatinput.cpp  fimportaccountformatinput.h  fimportaccountformatinput.ui  fviewchrome.cpp  fviewchrome.h  fviewchrome.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
MCommon/: AwApi.cpp  AwApi.h  Common.cpp  Common.h  CommonChrome.h  CommonRequest.h  ProxyTool.h  RequestParams.h  account.cpp  account.h  autocontrol.cpp  autocontrol.h  chrome.cpp  chrome.h  commonsql.cpp  commonsql.h  connector.cpp  connector.h  json_settings.cpp  json_settings.h  minproxy.cpp  minproxy.h  obcdcom.cpp  obcdcom.h  obcproxy.cpp  obcproxy.h  proxyv6net.cpp  proxyv6net.h  requesthandle.cpp  requesthandle.h  shoplike.cpp  shoplike.h  tinsoftproxy.cpp  tinsoftproxy.h  tmproxy.cpp  tmproxy.h  xproxyproxy.cpp  xproxyproxy.h
Table/: autotable.cpp  autotable.h  autoworkertablemodel.cpp  autoworkertablemodel.h  customtablemodel.cpp  customtablemodel.h
Utils/: Utils.h
Worker/: baseworker.cpp  baseworker.h  checkcookieworker.cpp  checkcookieworker.h  checkwallworker.cpp  checkwallworker.h
maxcare/: Base.cpp  Base.h  FileHelper.h  GetIconFacebook.cpp  GetIconFacebook.h  ImapHelper.cpp  ImapHelper.h  Language.cpp  Language.h  MessageBoxHelper.h  RegPage.h  SettingsTool.cpp  SettingsTool.h  StringHelper.h  Trash1.h  collectionhelper.cpp  collectionhelper.h  datagridviewhelper.cpp  datagridviewhelper.h  emailhelper.cpp  emailhelper.h  interactsql.cpp  interactsql.h  setupfolder.cpp  setupfolder.h  updatestatus.cpp  updatestatus.h
maxcare/Enum/: GetContentStatusChrome.h  StatusChromeAccount.h
maxcare/KichBan/: interactconnector.cpp  interactconnector.h
